# AddaxAI-Connect

./: .env.example  .gitignore  404.html  CNAME  COLD_TIER_PLAN.md  CONVENTIONS.md  DASHBOARD_PLAN.md  DEVELOPERS.md  LICENSE  MULTI_PROJECT_IMPLEMENTATION.md  NOTIFICATIONS_PLAN.md  PHONE_FRIENDLY_PLAN.md  PROJECT_PLAN.md  README.md  RECLONE.md  TODO.md  docker-compose.demo.yml  docker-compose.speciesnet.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  speciesnet-integration-notes.md  temp_status.md
.claude/: ROLE_SYSTEM_IMPLEMENTATION_PLAN.md
.githooks/: commit-msg
ansible/: inventory.yml.example  playbook.yml
architecture/: index.html
assets/: custom.css
camera-requirements/: index.html
deployment/: index.html
dev-server-setup/: index.html
docs/: QUICK-START-SSL-DEBUG.md  SSL-BUG-ROOT-CAUSE-AND-FIX.md  SSL-DEBUG-CHECKPOINTS.md  architecture.md  camera-management-spec.md  camera-requirements.md  data-formats.md  deployment.md  dev-server-setup.md  getting-started.md  (+14 more)
shared/: models.py  pyproject.toml  queue.py  setup.py
shared/shared/: __init__.py  bulk_jobs.py  classification_threshold.py  config.py  database.py  deployments.py  email_renderer.py  geo.py  logger.py  models.py  queue.py  species.py  storage.py  taxonomy.py
shared/shared/templates/: base_email.html  disk_usage_alert.html  email_report.html  email_verification.html  excessive_images_alert.html  infra_alert.html  password_reset.html  project_assignment.html  project_inactivity_alert.html  project_invitation.html  project_reminder.html  project_role_change.html  server_admin_invitation.html  server_admin_promotion.html  sim_expiry_alert.html
(+599 files in other folders)
